--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 } .controls-row {
   display: flex;
   align-items: center;
-  gap: 50px;
+  gap: 35px;
 }  .socials {
       margin-top: 5px;
       display: flex;
@@ -481,9 +481,9 @@
       opacity: 0.6;
     }    @media (max-width: 768px) {
       .card {
-        width: 95vw;
-        height: 95vh;
-        padding: 30px 20px;
+        width: 80vw;
+        height: 80vh;
+        padding: 25px 20px;
       }      .username {
         font-size: 2.2em;
       }      .intro-text {
@@ -496,10 +496,10 @@
         height: 50px;
         font-size: 24px;
       }     .audio-player {
-        max-width: 100%;
-        padding: 15px;
+        max-width: 90%;
+        padding: 13px;
       }      .audio-content {
-        gap: 15px;
+        gap: 13px;
       }      .song-cover {
         width: 70px;
         height: 70px;
@@ -510,7 +510,7 @@
         height: 40px;
         font-size: 16px;
       }      .volume-slider {
-        width: 100px;
+        width: 80px;
       }      .audio-toggle {
         width: 50px;
         height: 50px;
@@ -535,7 +535,7 @@
   100% {
     opacity: 0;
     transform: scale(0.3) translateY(1px);}}.time-display {
-      margin: 0;
+      margin: 5px;
   padding: 13px;
   background: rgba(255, 102, 102, 0.1);
   backdrop-filter: blur(10px);
