--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 <link rel="preload" href="./assets/fonts/font.otf" as="font" type="font/otf" crossorigin>
-<link rel="dns-prefetch" href="//api.lanyard.rest">
+<link rel="dns-preload" href="//api.lanyard.rest">
 <link rel="preload" href="./assets/music/cover.jpg" as="image" crossorigin>
-<link rel="prefetch" href="./assets/pfp/pfp.png" as="image">
-<link rel="prefetch" href="./assets/pfp/pfpround.png" as="image">
+<link rel="preload" href="./assets/pfp/pfp.png" as="image">
+<link rel="preload" href="./assets/pfp/pfpround.png" as="image">
+<link rel="preload" href="./assets/music/background-music.mp3" as="audio" type="audio/mpeg">
+<link rel="preload" href="./assets/background/background.mp4" as="video" type="video/mp4">
 <title>Tav</title>
 <style>
 @font-face{
